--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Lista di Email</title>
     <!--AXIOS-->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!--FOGLIO CSS-->
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!--FOGLIO JAVASCRIPT-->
