--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!--TITOLO-->
+    <header>
+      <h1>Generatore di 10 Mail con API</h1>
+    </header>
+
     <!--FOGLIO JAVASCRIPT-->
     <script src="main.js"></script>
   </body>
