--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <header>
       <h1>Generatore di 10 Mail con API</h1>
     </header>
+    <!--CONTENITORE CON CARD CHE CONTIENE EMAIL-->
+    <div id="team-container">
+      <div id="card">
+        <h3 id="email"></h3>
+      </div>
+    </div>
 
     <!--FOGLIO JAVASCRIPT-->
     <script src="main.js"></script>
