feat: change id name container

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Generatore di 10 Mail con API</h1>
     </header>
     <!--CONTENITORE CON CARD CHE CONTIENE EMAIL-->
-    <div id="team-container">
+    <div id="mail-container">
       <div id="card">
         <h3 id="email"></h3>
       </div>
