feat: added tag button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h3 id="email"></h3>
       </div>
     </div>
-
+    <button id="load-emails">Carica nuove Email</button>
     <!--FOGLIO JAVASCRIPT-->
     <script src="main.js"></script>
   </body>
